...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rankin.adam.cookingmaster.activity.AddRecipeActivity">

    <Button
        android:id="@+id/addRecipeAct_btn_add_recipe"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
...
        android:layout_width="54dp"
        android:layout_height="34dp"
        android:layout_marginStart="8dp"
        android:text="@string/mins"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/addRecipeAct_txt_time"
        app:layout_constraintStart_toEndOf="@+id/addRecipeAct_txt_time" />

    <EditText
        android:id="@+id/addRecipeAct_txt_time"
        android:layout_width="43dp"
        android:layout_height="wrap_content"
...
        android:hint="@string/zeros"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/addRecipeAct_txt_name"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="163dp"
        android:layout_height="38dp"
...
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/addRecipeAct_txt_allergen_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_allergens"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="@+id/addRecipeAct_txt_time" />
...
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/instructions"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/addRecipeAct_txt_instructions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addRecipeAct_btn_add_image" />

    <EditText
        android:id="@+id/addRecipeAct_txt_instructions"
...
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/addRecipeAct_txt_allergen_list" />

    <Button
        android:id="@+id/addRecipeAct_btn_set_ingredients"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:text="@string/set"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView11"
        app:layout_constraintStart_toStartOf="@+id/addRecipeAct_txt_allergen_list" />

...
