...
        app:layout_constraintBottom_toBottomOf="@+id/checkered"
        android:layout_margin="8dp"
        android:background="@color/material_dynamic_neutral90"/>


    <TextView
        android:id="@+id/viewRecipeAct_txt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/recipe_name"
...
        app:layout_constraintBottom_toTopOf="@+id/viewRecipeAct_txt_instructions_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewRecipeAct_txt_name" />

    <TextView
        android:id="@+id/viewRecipeAct_txt_time"
        android:layout_width="38dp"
        android:layout_height="26dp"
        android:layout_marginStart="8dp"
        android:text="@string/time_label"
        android:textColor="@android:color/black"
        android:textSize="18sp"
...
        android:layout_marginTop="8dp"
        android:text="@string/mins"
        app:layout_constraintEnd_toEndOf="@+id/viewRecipeAct_photo"
        app:layout_constraintStart_toEndOf="@+id/viewRecipeAct_txt_time"
        app:layout_constraintTop_toBottomOf="@+id/viewRecipeAct_txt_name" />
    <Button
        android:id="@+id/viewRecipeAct_btn_view_allergens"
        android:layout_width="wrap_content"
        android:layout_height="51dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/allergens"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/viewRecipeAct_btn_view_ingredients"
        app:layout_constraintTop_toBottomOf="@+id/viewRecipeAct_photo" />

    <Button
        android:id="@+id/viewRecipeAct_btn_view_ingredients"
        android:layout_width="wrap_content"
        android:layout_height="51dp"
...
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewRecipeAct_btn_view_ingredients" />

    <TextView
        android:id="@+id/viewRecipeAct_edt_instructions"
        android:layout_width="match_parent"
        android:layout_height="310dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/viewRecipeAct_btn_edit"
...
        android:layout_marginEnd="8dp"
        android:text="@string/edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/viewRecipeAct_btn_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="parent"
...
