<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/ingredients"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ingrDialog_txt_add_ingredient"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/ingredient"
        android:imeOptions="actionDone"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17"
        android:autofillHints="" />

    <Button
        android:id="@+id/ingrDialog_btn_add_ingredient"
        android:layout_width="61dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/add"
        app:layout_constraintBaseline_toBaselineOf="@+id/ingrDialog_txt_add_ingredient"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ingrDialog_recyclerView"
        android:layout_width="0dp"
        android:layout_height="341dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ingrDialog_btn_add_ingredient" />

    <Button
        android:id="@+id/ingrDialog_btn_save"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ingrDialog_recyclerView" />

    <EditText
        android:id="@+id/ingrDialog_edt_amount"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/zeros"
        android:inputType="number"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:textSize="16sp"
        android:imeOptions="actionDone"
        app:layout_constraintStart_toEndOf="@+id/ingrDialog_txt_add_ingredient"
        app:layout_constraintTop_toBottomOf="@+id/textView17"
        android:autofillHints="" />

    <Spinner
        android:id="@+id/ingrDialog_spn_unit"
        android:layout_width="108dp"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/ingrDialog_edt_amount"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

</androidx.constraintlayout.widget.ConstraintLayout>